change debug set

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,8 @@
             "args": [
                 "-g",
                 "${file}",
+                "-l",
+                "curses",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
